LoanFlow/force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <label>Loan Application</label>
    <pluralLabel>Loan Applications</pluralLabel>
    <nameField>
        <label>Application Number</label>
        <type>AutoNumber</type>
        <displayFormat>APP-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>