LoanFlow/force-app/main/default/objects/Loan_Application__c/fields/Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income__c</fullName>
    <label>Annual Income</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>0</scale>
</CustomField>