LoanFlow/force-app/main/default/objects/Loan_Application__c/fields/Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reason__c</fullName>
    <label>Decision Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>