LoanFlow/force-app/main/default/objects/Loan_Application__c/fields/Employment_Years__c.field-meta.xml
<CustomField>
    <fullName>Employment_Years__c</fullName>
    <label>Employment Years</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>