LoanFlow/force-app/main/default/objects/Loan_Application__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <label>Loan Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>