LoanFlow/force-app/main/default/objects/Loan_Application__c/fields/Monthly_Debt__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Debt__c</fullName>
    <label>Monthly Debt</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>0</scale>
</CustomField>