LoanFlow/force-app/main/default/objects/Loan_Application__c/fields/Requires_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Requires_Underwriter__c</fullName>
    <label>Requires Underwriter</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set when the application is referred for manual review.</description>
</CustomField>